updated to 0.0.2 to make it work on java version 1.8 (instead of 11 or later)